fix: canvas / viewport "jumps" if an element gets selected

--- a/src/widgets/page/PageContainer.module.scss
+++ b/src/widgets/page/PageContainer.module.scss
@@ -54,9 +54,15 @@
 }
 
 .details {
+  // use shadow instead of border, because a border made the reflexelements "jump" slightly...
+  -webkit-box-shadow: 0 0 0 1px $border-color;
+  box-shadow: 0 0 0 1px $border-color;
+
   background: white;
   border-radius: $border-radius;
-  border: 1px solid $border-color;
-  padding: $content-padding;
   height: unset !important;
+
+  & > * {
+    padding: $content-padding;
+  }
 }
